hphp/test/zend/bad/zend/gc_031.php
<?php
gc_collect_cycles();
echo "DONE\n";
?>